include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libaurora.la

noinst_HEADERS = \
                 types.h \
                 error.h \
                 util.h \
                 language.h \
                 archive.h \
                 aurorafile.h \
                 erffile.h \
                 rimfile.h \
                 keyfile.h \
                 biffile.h \
                 ndsrom.h \
                 herffile.h \
                 locstring.h \
                 gfffile.h \
                 gff4file.h \
                 $(EMPTY)

libaurora_la_SOURCES = \
                       error.cpp \
                       util.cpp \
                       language.cpp \
                       archive.cpp \
                       aurorafile.cpp \
                       erffile.cpp \
                       rimfile.cpp \
                       keyfile.cpp \
                       biffile.cpp \
                       ndsrom.cpp \
                       herffile.cpp \
                       locstring.cpp \
                       gfffile.cpp \
                       gff4file.cpp \
                       $(EMPTY)
