include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libaurora.la

noinst_HEADERS = \
                 types.h \
                 util.h \
                 language.h \
                 archive.h \
                 aurorafile.h \
                 erffile.h \
                 rimfile.h \
                 keyfile.h \
                 biffile.h \
                 ndsrom.h \
                 herffile.h \
                 locstring.h \
                 gff3file.h \
                 gff4file.h \
                 gff4fields.h \
                 talktable.h \
                 talktable_tlk.h \
                 talktable_gff.h \
                 2dafile.h \
                 gdafile.h \
                 smallfile.h \
                 nitrofile.h \
                 nsbtxfile.h \
                 $(EMPTY)

libaurora_la_SOURCES = \
                       util.cpp \
                       language.cpp \
                       archive.cpp \
                       aurorafile.cpp \
                       erffile.cpp \
                       rimfile.cpp \
                       keyfile.cpp \
                       biffile.cpp \
                       ndsrom.cpp \
                       herffile.cpp \
                       locstring.cpp \
                       gff3file.cpp \
                       gff4file.cpp \
                       talktable.cpp \
                       talktable_tlk.cpp \
                       talktable_gff.cpp \
                       2dafile.cpp \
                       gdafile.cpp \
                       smallfile.cpp \
                       nitrofile.cpp \
                       nsbtxfile.cpp \
                       $(EMPTY)
