# xoreos - A reimplementation of BioWare's Aurora engine
#
# xoreos is the legal property of its developers, whose names
# can be found in the AUTHORS file distributed with this source
# distribution.
#
# xoreos is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 3
# of the License, or (at your option) any later version.
#
# xoreos is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with xoreos. If not, see <http://www.gnu.org/licenses/>.

# Aurora file loaders and related support code.

include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libaurora.la

noinst_HEADERS = \
                 types.h \
                 util.h \
                 language.h \
                 language_strings.h \
                 archive.h \
                 aurorafile.h \
                 erffile.h \
                 rimfile.h \
                 keyfile.h \
                 biffile.h \
                 ndsrom.h \
                 herffile.h \
                 locstring.h \
                 gff3file.h \
                 gff4file.h \
                 gff4fields.h \
                 talktable.h \
                 talktable_tlk.h \
                 talktable_gff.h \
                 ssffile.h \
                 2dafile.h \
                 gdafile.h \
                 gdaheaders.h \
                 smallfile.h \
                 nitrofile.h \
                 nsbtxfile.h \
                 $(EMPTY)

libaurora_la_SOURCES = \
                       util.cpp \
                       language.cpp \
                       archive.cpp \
                       aurorafile.cpp \
                       erffile.cpp \
                       rimfile.cpp \
                       keyfile.cpp \
                       biffile.cpp \
                       ndsrom.cpp \
                       herffile.cpp \
                       locstring.cpp \
                       gff3file.cpp \
                       gff4file.cpp \
                       talktable.cpp \
                       talktable_tlk.cpp \
                       talktable_gff.cpp \
                       ssffile.cpp \
                       2dafile.cpp \
                       gdafile.cpp \
                       gdaheaders.cpp \
                       smallfile.cpp \
                       nitrofile.cpp \
                       nsbtxfile.cpp \
                       $(EMPTY)
