include $(top_srcdir)/Makefile.common

SUBDIRS = \
          $(EMPTY)

noinst_LTLIBRARIES = libimages.la

noinst_HEADERS = \
                 types.h \
                 util.h \
                 s3tc.h \
                 decoder.h \
                 dumptga.h \
                 winiconimage.h \
                 tga.h \
                 dds.h \
                 tpc.h \
                 txb.h \
                 sbm.h \
                 $(EMPTY)

libimages_la_SOURCES = \
                       s3tc.cpp \
                       decoder.cpp \
                       dumptga.cpp \
                       winiconimage.cpp \
                       tga.cpp \
                       dds.cpp \
                       tpc.cpp \
                       txb.cpp \
                       sbm.cpp \
                       $(EMPTY)

libimages_la_LIBADD = \
                      $(EMPTY)
