include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libnwscript.la

noinst_HEADERS = \
                 types.h \
                 util.h \
                 ncsfile.h \
                 parse.h \
                 game.h \
                 game_nwn.h \
                 game_nwn2.h \
                 game_kotor.h \
                 game_kotor2.h \
                 game_jade.h \
                 game_witcher.h \
                 game_dragonage.h \
                 game_dragonage2.h \
                 $(EMPTY)

libnwscript_la_SOURCES = \
                         util.cpp \
                         ncsfile.cpp \
                         parse.cpp \
                         game.cpp \
                         $(EMPTY)
