include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libnwscript.la

noinst_HEADERS = \
                 variable.h \
                 stack.h \
                 instruction.h \
                 block.h \
                 subroutine.h \
                 util.h \
                 ncsfile.h \
                 parse.h \
                 game.h \
                 game_nwn.h \
                 game_nwn2.h \
                 game_kotor.h \
                 game_kotor2.h \
                 game_jade.h \
                 game_witcher.h \
                 game_dragonage.h \
                 game_dragonage2.h \
                 disassembler.h \
                 $(EMPTY)

libnwscript_la_SOURCES = \
                         variable.cpp \
                         stack.cpp \
                         util.cpp \
                         ncsfile.cpp \
                         parse.cpp \
                         game.cpp \
                         disassembler.cpp \
                         $(EMPTY)
